# job-assist

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.py
src/graph/: graph.py  state.py
src/llm/: providers.py
src/nodes/: analyzer.py  cover_letter.py  interview_prep.py  rescorer.py  rewriter.py  roadmap.py
src/schemas/: analyzer_output.py  coverletter_output.py  interview_prep_output.py  rescorer_output.py  rewriter_output.py  roadmap_output.py
src/tools/: pdf_parser.py
ui/: app.py  components.py  styles.css
